--- a/Assignment1_test.ipynb
+++ b/Assignment1_test.ipynb
@@ -98,7 +98,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m9mZ5N-wl31c",
-        "outputId": "3758fc65-8f7a-448c-e0cf-d87ff09c8f57"
+        "outputId": "57cfbf6b-f171-4c36-df6f-e35fdecc3fc4"
       },
       "execution_count": 3,
       "outputs": [
@@ -149,7 +149,6 @@
         "        soft[:, i] = numr/np.sum(numr)\n",
         "    return soft\n",
         "\n",
-        "\n",
         "def sigmoid_derivative(x):\n",
         "    return sigmoid(x) * (1-sigmoid(x))\n",
         "def relu_derivative(x):\n",
@@ -197,7 +196,7 @@
         "id": "1SNjmibWl4EH",
         "outputId": "5d16f9d6-5ade-4acf-bcac-11949deff7cb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,73 +215,37 @@
     {
       "cell_type": "code",
       "source": [
-        "#Forward Propogation\n",
-        "def forward_propagation(X, weights, biases,activation):\n",
-        "\n",
-        "        A = []  #pre-activation\n",
-        "       \n",
-        "        H  = []    # post activation\n",
-        "        W      = weights\n",
-        "        b      = biases\n",
-        "\n",
-        "        k=0\n",
-        "        A.append(np.dot(W[k],X)+b[k])\n",
-        "        if activation == 'sigmoid':\n",
-        "          H.append(sigmoid(A[k]))\n",
-        "        elif activation == 'tanh':\n",
-        "          H.append(tanh(A[k]))\n",
-        "        elif activation == 'relu':\n",
-        "          H.append(relu(A[k]))\n",
-        "        #elif self.activation == 'leaky_relu':\n",
-        "         # H.append(leaky_relu(A[k]))\n",
-        "\n",
-        "        for k in range(1,len(hidden_layer)):\n",
-        "            A.append(np.dot(W[k],H[k-1])+b[k])\n",
-        "            if activation == 'sigmoid':\n",
-        "              H.append(sigmoid(A[k]))\n",
-        "            elif activation == 'tanh':\n",
-        "              H.append(tanh(A[k]))\n",
-        "            elif activation == 'relu':\n",
-        "              H.append(relu(A[k]))\n",
-        "            elif activation == 'leaky_relu':\n",
-        "              H.append(leaky_relu(A[k]))\n",
-        "\n",
-        "        k=len(hidden_layer)\n",
-        "        A.append(np.dot(W[k],H[k-1])+b[k])\n",
-        "        H.append(softmax(A[k]))\n",
-        "\n",
-        "        return A , H\n",
-        "\n",
-        "   \n",
-        "A, H = forward_propagation(X_train, weights, biases, 'sigmoid')\n",
-        "for i in range(len(A)):\n",
-        "    print(A[i].shape)\n",
-        "   \n",
-        "for i in range(len(H)):\n",
-        "    print(H[i].shape)\n"
+        "#Forward propogation code here\n",
+        "def forward_propagation(self,input):\n",
+        "  self.A = []\n",
+        "  self.H  = []\n",
+        "  k=0\n",
+        "  self.A.append(np.dot(self.weights[k],input)+self.biases[k])\n",
+        "  if self.activation == 'sigmoid':\n",
+        "    self.H.append(sigmoid(self.A[k]))\n",
+        "  elif self.activation == 'tanh':\n",
+        "    self.H.append(tanh(self.A[k]))\n",
+        "  elif self.activation == 'relu':\n",
+        "    self.H.append(relu(self.A[k]))\n",
+        "  for k in range(1,len(self.hidden_layer)):\n",
+        "    self.A.append(np.dot(self.weights[k],self.H[k-1])+self.biases[k])\n",
+        "    if self.activation == 'sigmoid':\n",
+        "      self.H.append(sigmoid(self.A[k]))\n",
+        "    elif self.activation == 'tanh':\n",
+        "      self.H.append(tanh(self.A[k]))\n",
+        "    elif self.activation == 'relu':\n",
+        "      self.H.append(relu(self.A[k]))\n",
+        " \n",
+        "  k=len(self.hidden_layer)\n",
+        "  self.A.append(np.matmul(self.weights[k],self.H[k-1])+self.biases[k])\n",
+        "  self.H.append(softmax(self.A[k]))\n",
+        "  return self.H[-1]\n"
       ],
       "metadata": {
-        "id": "aFoyzmlgl4Nm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "86afcc7a-54db-4166-e41a-bc66edfd99a3"
+        "id": "aFoyzmlgl4Nm"
       },
       "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(64, 54000)\n",
-            "(64, 54000)\n",
-            "(10000, 54000)\n",
-            "(64, 54000)\n",
-            "(64, 54000)\n",
-            "(10000, 54000)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
