--- a/Assignment1_test.ipynb
+++ b/Assignment1_test.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "jnQVIKXtk6iG"
       },
@@ -45,7 +45,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Download the fashion-MNIST dataset and plot 1 sample image for each class as shown in the grid below. Use \"from keras.datasets import fashion_mnist\" for getting the fashion mnist dataset."
+        " Question 1 Download the fashion-MNIST dataset and plot 1 sample image for each class as shown in the grid below. Use \"from keras.datasets import fashion_mnist\" for getting the fashion mnist dataset."
       ],
       "metadata": {
         "id": "9Wa6eNWlNT9O"
@@ -100,7 +100,7 @@
         "id": "m9mZ5N-wl31c",
         "outputId": "57cfbf6b-f171-4c36-df6f-e35fdecc3fc4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "wcAC2XONl4BH"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "aFoyzmlgl4Nm"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
