--- a/Assignment1_test.ipynb
+++ b/Assignment1_test.ipynb
@@ -45,7 +45,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " Question 1 Download the fashion-MNIST dataset and plot 1 sample image for each class as shown in the grid below. Use \"from keras.datasets import fashion_mnist\" for getting the fashion mnist dataset."
+        "Question 1:Download the fashion-MNIST dataset and plot 1 sample image for each class as shown in the grid below. Use \"from keras.datasets import fashion_mnist\" for getting the fashion mnist dataset."
       ],
       "metadata": {
         "id": "9Wa6eNWlNT9O"
