--- a/CS6910_Assignment1.ipynb
+++ b/CS6910_Assignment1.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "9l-P-RsIMmT1"
       },
@@ -44,23 +44,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1.The fashion-MNIST dataset and plot 1 sample image for each class as shown in the grid below. Use \"from keras.datasets import fashion_mnist\" for getting the fashion mnist dataset."
+        "Question 1 : Prepare dataset from fashion mnist "
       ],
       "metadata": {
-        "id": "5trmvB4wk3A7"
+        "id": "PLx2IzTkuEwm"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Question1 code here\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "cgwPnPKFOu8X"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -104,12 +92,12 @@
       ],
       "metadata": {
         "id": "_wGhduubMw9h",
-        "outputId": "6028fec8-deae-49b3-d616-5f7ee92901be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e49e3ea3-dc7e-4638-bdf2-ba32ae272f73"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +108,7 @@
             "40960/29515 [=========================================] - 0s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
             "26427392/26421880 [==============================] - 0s 0us/step\n",
-            "26435584/26421880 [==============================] - 0s 0us/step\n",
+            "26435584/26421880 [==============================] - 1s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
             "16384/5148 [===============================================================================================] - 0s 0us/step\n",
             "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
@@ -169,8 +157,6 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
         "#Initialisation of parameters\n",
         "def initialize_parameters(input_layer, hidden_layer, output_layer,initilisation):\n",
         "    weights = []\n",
@@ -187,7 +173,7 @@
       "metadata": {
         "id": "JCRWxL9ZMxDH"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -213,34 +199,44 @@
         "    \n",
         "    \n",
         "    #Forward Propogation code here\n",
-        "    def forward_propagation(self,input):\n",
-        " \n",
-        "        self.A = []\n",
-        "        self.H  = []\n",
-        "        k=0\n",
-        "       \n",
-        "        self.A.append(np.dot(self.weights[k],input)+self.biases[k])\n",
-        "        if self.activation == 'sigmoid':\n",
-        "          self.H.append(sigmoid(self.A[k]))\n",
-        "        elif self.activation == 'tanh':\n",
-        "          self.H.append(tanh(self.A[k]))\n",
-        "        elif self.activation == 'relu':\n",
-        "          self.H.append(relu(self.A[k]))\n",
+        "    def forward_propagation(X, weights, biases,activation):\n",
+        "      A = []  #pre-activation\n",
+        "      H  = []    # post activation\n",
+        "      W      = weights\n",
+        "      b      = biases\n",
+        "      k=0\n",
+        "      A.append(np.dot(W[k],X)+b[k])\n",
+        "      if activation == 'sigmoid':\n",
+        "         H.append(sigmoid(A[k]))\n",
+        "      elif activation == 'tanh':\n",
+        "        H.append(tanh(A[k]))\n",
+        "      elif activation == 'relu':\n",
+        "        H.append(relu(A[k]))\n",
+        "      #elif self.activation == 'leaky_relu':\n",
+        "        # H.append(leaky_relu(A[k]))\n",
         "\n",
-        "        for k in range(1,len(self.hidden_layer)):\n",
-        "            self.A.append(np.dot(self.weights[k],self.H[k-1])+self.biases[k])\n",
-        "            if self.activation == 'sigmoid':\n",
-        "              self.H.append(sigmoid(self.A[k]))\n",
-        "            elif self.activation == 'tanh':\n",
-        "              self.H.append(tanh(self.A[k]))\n",
-        "            elif self.activation == 'relu':\n",
-        "              self.H.append(relu(self.A[k]))\n",
-        " \n",
-        "        k=len(self.hidden_layer)\n",
-        "        self.A.append(np.matmul(self.weights[k],self.H[k-1])+self.biases[k])\n",
-        "        self.H.append(softmax(self.A[k]))\n",
+        "      for k in range(1,len(hidden_layer)):\n",
+        "        A.append(np.dot(W[k],H[k-1])+b[k])\n",
+        "      if activation == 'sigmoid':\n",
+        "        H.append(sigmoid(A[k]))\n",
+        "      elif activation == 'tanh':\n",
+        "        H.append(tanh(A[k]))\n",
+        "      elif activation == 'relu':\n",
+        "        H.append(relu(A[k]))\n",
+        "      elif activation == 'leaky_relu':\n",
+        "        H.append(leaky_relu(A[k]))\n",
         "\n",
-        "        return self.H[-1]\n",
+        "      k=len(hidden_layer)\n",
+        "      A.append(np.dot(W[k],H[k-1])+b[k])\n",
+        "      H.append(softmax(A[k]))\n",
+        "\n",
+        "      return A , H\n",
+        "      A, H = forward_propagation(X_train, weights, biases, 'sigmoid')\n",
+        "      for i in range(len(A)):\n",
+        "        print(A[i].shape)\n",
+        "      for i in range(len(H)):\n",
+        "        print(H[i].shape)\n",
+        "    \n",
         "\n",
         "\n",
         "     #Back propogation\n",
@@ -281,29 +277,7 @@
       "metadata": {
         "id": "XThPMeSPMxFO"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "WVawwPLGMxHo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "RBs--0RWMxKB"
-      },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ]
